chgmgmt_build/src/objects/Staff__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>クライアント名</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>スタッフ</relationshipLabel>
        <relationshipName>Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adress__c</fullName>
        <label>居住地</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Owner:User.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>派遣元部署名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labor_Fee_Billed__c</fullName>
        <label>請求単価</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>氏名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaioKubun__c</fullName>
        <label>対応区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>スタッフ</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>スタッフ番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>スタッフ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>